--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -827,7 +827,7 @@ footer {
                 <p>The latest insights into AI advancements and their impact.</p>
             </div>
             <div class="hero-image">
-                <img src="vrAI.jpg" alt="VR AI Technology">
+                <img src="/public/img-vid/vrAI.jpg" alt="VR AI Technology">
             </div>
         </section>
         <h1>Read the Blog</h1>
